# physical-neural-face-decomposition

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cache_home/.ipython/profile_default/: history.sqlite
.cache_home/.jupyter/: migrated
.jupyter_runtime/: jupyter_cookie_secret
data/: README.md
notebooks/: research_inverse_rendering_demo.ipynb
reports/: README.md  technical_report.md
src/: __init__.py  config.py  pipeline.py
src/data/: __init__.py  preprocessing.py
src/evaluation/: __init__.py  diagnostics.py  metrics.py  visualization.py
src/experiments/: __init__.py  checkpointing.py
src/models/: __init__.py  face_prior.py  face_priors.py  residual_net.py
src/optimization/: __init__.py  inverse_rendering.py  losses.py  mitsuba_inverse.py
src/renderer/: __init__.py  bust_template.py  geometry.py  lighting.py  mitsuba_adapter.py  mitsuba_scene.py  torch_renderer.py
src/training/: __init__.py  datasets.py  trainer.py
